--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,29 @@
-# Prerequisites
-*.d
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+#include "dna_sequence.h"
+#include <stdio.h>
+#include <stdlib.h>
+#include <time.h>
 
-# Linker output
-*.ilk
-*.map
-*.exp
+int main() {
+    srand(time(NULL)); // Seed the random number generator
 
-# Precompiled Headers
-*.gch
-*.pch
+    for (int i = 0; i < 2; i++) {
+        DNASequence *sequence = createDNASequence();
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
+        printf("First Sequence:\n");
+        printSequence(sequence);
 
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
+        int it = sequence->max_lifespan;
+        for (int age = 0; age <= it; age++) {
+            applyLC(sequence);
+            if (sequence->current_age >= sequence->max_lifespan || sequence->sequence->head == NULL) {
+                printf("Simulation ended, lifespan has ben reached or else sequence it terminated.\n");
+                break;
+            }
+        }
 
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+        freeSequence(sequence);
+    }
 
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+    return 0;
+}
